--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "immutable": "^3.7.6",
     "react-native": "^0.21.0",
+    "react-native-vector-icons": "^1.3.2",
     "react-redux": "^4.4.1",
     "redux": "^3.3.1",
     "redux-thunk": "^2.0.1"
